fix(ui): add flex-wrap

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,11 +59,14 @@ button {
 .header {
   padding: 1rem 2rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
+  gap: 2rem;
 }
 
 .right-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -125,4 +128,9 @@ button {
   font-family: 'Urbanist', serif;
   font-size: 2.5rem;
   font-weight: 550;
+}
+
+.data-container {
+  display: flex;
+  flex-wrap: wrap;
 }
